Añadidos los textos de la sección "our goals" en español. Añadidas las fotos más formales y las más infantiles (mismo nombre pero acabadas en 2) a falta de decidir el estilo de las fotos. Añadidos atributos height y width a las imágenes provisionalmente hasta definir atributo class.

--- a/templates/webapp/ourgoals.html
+++ b/templates/webapp/ourgoals.html
@@ -14,7 +14,9 @@
             <div class="jumbotron">
                 <h2 class="goals-main-title">What is EatHub?</h2>
                 <p>
-                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                    EatHub es una red social en la que podr&aacute; compartir sus recetas, mejorar las de sus amigos y
+                    relacionarse con los dem&aacute;s. De este modo, podr&aacute; preparar su comida favorita de otra
+                    forma y otras comidas de cualquier parte del mundo.
                 </p>
 
             </div>
@@ -24,35 +26,42 @@
         <div class="col-md-4 column">
             <h2 class="goals-panel-title">Create</h2>
             <p>
-                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                En EatHub podr&aacute; crear sus propias recetas y compartirlas con sus amigos. Podr&aacute;
+                indicar desde los ingredientes y sus cantidades hasta los pasos a seguir. Si usted tiene
+                prepara alguna comida con alg&uacute;n paso diferente no tiene m&aacute;s que compartirlo.
             </p>
             <div class="goals-thumbnail">
-                </p><img alt="140x140" src="http://lorempixel.com/140/140/" class="img-rounded" />
+                </p><img alt="140x140" height="200" width="250" src="/static/webapp/image/ourGoalsCreate.jpg" class="img-rounded" />
             </div>
         </div>
         <div class="col-md-4 column">
             <h2 class="goals-panel-title">Improve</h2>
             <p>
-                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                Si le gusta alguna receta pero quiere añadir alg&uacute;n ingrediente o alg&uacute;n paso tiene
+                la opci&oacute;n de mejorarla. De este modo se crear&aacute; un &aacute;rbol geneal&oacute;gico de
+                recetas en el que figurar&aacute; la jerarqu&iacute;a de las mismas.
             </p>
             <div class="goals-thumbnail">
-                </p><img alt="140x140" src="http://lorempixel.com/140/140/" class="img-rounded" />
+                </p><img alt="140x140" height="200" width="200" src="/static/webapp/image/ourGoalsImprove.jpg" class="img-rounded" />
             </div>
         </div>
         <div class="col-md-4 column">
             <h2 class="goals-panel-title">Follow</h2>
             <p>
-                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                Al igual que en cualquier red social, los usuarios tienen su propio perfil. A trav&eacute;s de &eacute;l
+                la comunidad de usuarios de EatHub puede ver sus recetas y estar en contacto. si le gustan las recetas
+                de un usuario puede seguirlo para estar informado de sus nuevas recetas.
             </p>
             <div class="goals-thumbnail">
-                </p><img alt="140x140" src="http://lorempixel.com/140/140/" class="img-rounded" />
+                </p><img alt="140x140" height="200" width="300" src="/static/webapp/image/ourGoalsFollow.jpg" class="img-rounded" />
             </div>
         </div>
     </div>
     <br>
     <div class="panel panel-body row goals-description">
         <h3 class="goals-panel-title">Affinity System</h3>
-        <p class="text-soft"> Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.  </p>
+        <p class="text-soft"> En su perfil podr&aacute; indicar sus sabores preferidos. Con dichos sabores le
+        podremos recomendar multitud de recetas con par&aacute;metros similares.</p>
     </div>
 </div>
 
