añadidas etiquetas de traducciones

--- a/templates/webapp/ourgoals.html
+++ b/templates/webapp/ourgoals.html
@@ -12,11 +12,11 @@
     <div class="panel panel-body row goals-description">
         <div class="col-md-12 column">
             <div class="jumbotron">
-                <h2 class="goals-main-title">What is EatHub?</h2>
+                <h2 class="goals-main-title">{% trans "What is EatHub?" %}</h2>
                 <p>
-                    EatHub es una red social en la que podr&aacute; compartir sus recetas, mejorar las de sus amigos y
-                    relacionarse con los dem&aacute;s. De este modo, podr&aacute; preparar su comida favorita de otra
-                    forma y otras comidas de cualquier parte del mundo.
+                    {%  trans "EatHub es una red social en la que podr&aacute; compartir sus recetas, mejorar las de sus amigos y" %}
+                    {%  trans "relacionarse con los dem&aacute;s. De este modo, podr&aacute; preparar su comida favorita de otra" %}
+                    {%  trans "forma y otras comidas de cualquier parte del mundo." %}
                 </p>
 
             </div>
@@ -24,33 +24,33 @@
     </div>
     <div class="row clearfix">
         <div class="col-md-4 column">
-            <h2 class="goals-panel-title">Create</h2>
+            <h2 class="goals-panel-title">{%  trans "Create"%}</h2>
             <p>
-                En EatHub podr&aacute; crear sus propias recetas y compartirlas con sus amigos. Podr&aacute;
-                indicar desde los ingredientes y sus cantidades hasta los pasos a seguir. Si usted tiene
-                prepara alguna comida con alg&uacute;n paso diferente no tiene m&aacute;s que compartirlo.
+                {%  trans "En EatHub podr&aacute; crear sus propias recetas y compartirlas con sus amigos. Podr&aacute;"%}
+                {%  trans "indicar desde los ingredientes y sus cantidades hasta los pasos a seguir. Si usted tiene"%}
+                {%  trans "prepara alguna comida con alg&uacute;n paso diferente no tiene m&aacute;s que compartirlo."%}
             </p>
             <div class="goals-thumbnail">
                 </p><img alt="140x140" height="200" width="250" src="/static/webapp/image/ourGoalsCreate.jpg" class="img-rounded" />
             </div>
         </div>
         <div class="col-md-4 column">
-            <h2 class="goals-panel-title">Improve</h2>
+            <h2 class="goals-panel-title">{%  trans "Improve" %}</h2>
             <p>
-                Si le gusta alguna receta pero quiere añadir alg&uacute;n ingrediente o alg&uacute;n paso tiene
-                la opci&oacute;n de mejorarla. De este modo se crear&aacute; un &aacute;rbol geneal&oacute;gico de
-                recetas en el que figurar&aacute; la jerarqu&iacute;a de las mismas.
+                {%  trans "Si le gusta alguna receta pero quiere añadir algún ingrediente o algún paso tiene"%}
+                {%  trans "la opción de mejorarla. De este modo se crear&aacute; un árbol genealógico de"%}
+                {%  trans "recetas en el que figurar&aacute; la jerarqu&iacute;a de las mismas."%}
             </p>
             <div class="goals-thumbnail">
                 </p><img alt="140x140" height="200" width="200" src="/static/webapp/image/ourGoalsImprove.jpg" class="img-rounded" />
             </div>
         </div>
         <div class="col-md-4 column">
-            <h2 class="goals-panel-title">Follow</h2>
+            <h2 class="goals-panel-title">{%  trans "Follow"%}</h2>
             <p>
-                Al igual que en cualquier red social, los usuarios tienen su propio perfil. A trav&eacute;s de &eacute;l
-                la comunidad de usuarios de EatHub puede ver sus recetas y estar en contacto. si le gustan las recetas
-                de un usuario puede seguirlo para estar informado de sus nuevas recetas.
+                {%  trans "Al igual que en cualquier red social, los usuarios tienen su propio perfil. A través de él, "%}
+                {%  trans "la comunidad de usuarios de EatHub puede ver sus recetas y estar en contacto. si le gustan las recetas "%}
+                {%  trans "de un usuario puede seguirlo para estar informado de sus nuevas recetas. "%}
             </p>
             <div class="goals-thumbnail">
                 </p><img alt="140x140" height="200" width="300" src="/static/webapp/image/ourGoalsFollow.jpg" class="img-rounded" />
@@ -59,9 +59,9 @@
     </div>
     <br>
     <div class="panel panel-body row goals-description">
-        <h3 class="goals-panel-title">Affinity System</h3>
-        <p class="text-soft"> En su perfil podr&aacute; indicar sus sabores preferidos. Con dichos sabores le
-        podremos recomendar multitud de recetas con par&aacute;metros similares.</p>
+        <h3 class="goals-panel-title">{%  trans "Affinity System"%}</h3>
+        <p class="text-soft"> {%  trans "En su perfil podr&aacute; indicar sus sabores preferidos. Con dichos sabores le"%}
+        {%  trans "podremos recomendar multitud de recetas con par&aacute;metros similares."%}</p>
     </div>
 </div>
 
