--- a/templates/webapp/ourgoals.html
+++ b/templates/webapp/ourgoals.html
@@ -10,17 +10,17 @@
 {% block container %}
     <div class="container">
     <div class="panel panel-body row goals-description">
-        <div class="col-md-12 column">
-            <div class="jumbotron">
+
+            <div class="goals-jumbotron">
                 <h2 class="goals-main-title">{% trans "What is EatHub?" %}</h2>
-                <p>
+                <p class="text-soft">
                     {%  trans "EatHub es una red social en la que podr&aacute; compartir sus recetas, mejorar las de sus amigos y" %}
                     {%  trans "relacionarse con los dem&aacute;s. De este modo, podr&aacute; preparar su comida favorita de otra" %}
                     {%  trans "forma y otras comidas de cualquier parte del mundo." %}
                 </p>
 
             </div>
-        </div>
+
     </div>
     <div class="row clearfix">
         <div class="col-md-4 column">
