--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -52,11 +52,11 @@
                         <form class="navbar-form navbar-left" role="search" method="post" action="{% url 'search' %}">
                             {% csrf_token %}
                             <div class="form-group">
-                            <input type="text" class="form-control border-search border-rect" placeholder="Search..."
+                            <input type="text" class="form-control border-search border-rect-red" placeholder="Search..."
                                    name="srch-term"
                                    id="srch-term">
                                 <span class="input-group-btn-red navbar-input-group-btn">
-                                    <button class="btn btn-default border-default" type="submit">
+                                    <button class="btn btn-default" type="submit">
                                         <i class="glyphicon glyphicon-search"></i>
                                     </button>
                                 </span>
