--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -38,7 +38,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="{% url 'main' %}">
-                        <img class="navbar-logo" src="{% static 'webapp/image/logo_big.png' %}"/>
+                        <img class="navbar-logo" src="{% static 'webapp/image/logo_white.png' %}"/>
                     </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
