--- a/templates/webapp/ourgoals.html
+++ b/templates/webapp/ourgoals.html
@@ -2,68 +2,82 @@
 {% load staticfiles %}
 {% load i18n %}
 <STYLE type="text/css">
-  h3 {margin-right:20px;
-      text-align:justify;
-      text-justify:inter-word;}
- </STYLE>
+    h3 {
+        margin-right: 20px;
+        text-align: justify;
+        text-justify: inter-word;
+    }
+</STYLE>
 
 {% block container %}
     <div class="container">
-    <div class="panel panel-body row goals-description">
+        <div class="panel panel-body row goals-description">
 
             <div class="goals-jumbotron">
                 <h2 class="goals-main-title">{% trans "What is EatHub?" %}</h2>
+
                 <p class="text-soft">
-                    {%  trans "EatHub es una red social en la que podr&aacute; compartir sus recetas, mejorar las de sus amigos y" %}
-                    {%  trans "relacionarse con los dem&aacute;s. De este modo, podr&aacute; preparar su comida favorita de otra" %}
-                    {%  trans "forma y otras comidas de cualquier parte del mundo." %}
+                    {% trans "EatHub es una red social en la que podr&aacute; compartir sus recetas, mejorar las de sus amigos y" %}
+                    {% trans "relacionarse con los dem&aacute;s. De este modo, podr&aacute; preparar su comida favorita de otra" %}
+                    {% trans "forma y otras comidas de cualquier parte del mundo." %}
                 </p>
 
             </div>
 
-    </div>
-    <div class="row clearfix">
-        <div class="col-md-4 column">
-            <h2 class="goals-panel-title">{%  trans "Create"%}</h2>
-            <p>
-                {%  trans "En EatHub podr&aacute; crear sus propias recetas y compartirlas con sus amigos. Podr&aacute;"%}
-                {%  trans "indicar desde los ingredientes y sus cantidades hasta los pasos a seguir. Si usted tiene"%}
-                {%  trans "prepara alguna comida con alg&uacute;n paso diferente no tiene m&aacute;s que compartirlo."%}
-            </p>
-            <div class="goals-thumbnail">
-                </p><img alt="140x140" height="200" width="250" src="/static/webapp/image/ourGoalsCreate.jpg" class="img-rounded" />
+        </div>
+        <div class="row clearfix">
+            <div class="col-md-4 column">
+                <h2 class="goals-panel-title">{% trans "Create" %}</h2>
+
+                <p>
+                    {% trans "En EatHub podr&aacute; crear sus propias recetas y compartirlas con sus amigos. Podr&aacute;" %}
+                    {% trans "indicar desde los ingredientes y sus cantidades hasta los pasos a seguir. Si usted tiene" %}
+                    {% trans "prepara alguna comida con alg&uacute;n paso diferente no tiene m&aacute;s que compartirlo." %}
+                </p>
+
+                <div class="goals-thumbnail">
+                    </p><img alt="140x140" height="200" width="250" src="/static/webapp/image/ourGoalsCreate.jpg"
+                             class="img-rounded"/>
+                </div>
+            </div>
+            <div class="col-md-4 column">
+                <h2 class="goals-panel-title">{% trans "Improve" %}</h2>
+
+                <p>
+                    {% trans "Si le gusta alguna receta pero quiere añadir algún ingrediente o algún paso tiene" %}
+                    {% trans "la opción de mejorarla. De este modo se crear&aacute; un árbol genealógico de" %}
+                    {% trans "recetas en el que figurar&aacute; la jerarqu&iacute;a de las mismas." %}
+                </p>
+
+                <div class="goals-thumbnail">
+                    </p><img alt="140x140" height="200" width="200" src="/static/webapp/image/ourGoalsImprove.jpg"
+                             class="img-rounded"/>
+                </div>
+            </div>
+            <div class="col-md-4 column">
+                <h2 class="goals-panel-title">{% trans "Follow" %}</h2>
+
+                <p>
+                    {% trans "Al igual que en cualquier red social, los usuarios tienen su propio perfil. A través de él, " %}
+                    {% trans "la comunidad de usuarios de EatHub puede ver sus recetas y estar en contacto. si le gustan las recetas " %}
+                    {% trans "de un usuario puede seguirlo para estar informado de sus nuevas recetas. " %}
+                </p>
+
+                <div class="goals-thumbnail">
+                    </p><img alt="140x140" height="200" width="300" src="/static/webapp/image/ourGoalsFollow.jpg"
+                             class="img-rounded"/>
+                </div>
             </div>
         </div>
-        <div class="col-md-4 column">
-            <h2 class="goals-panel-title">{%  trans "Improve" %}</h2>
-            <p>
-                {%  trans "Si le gusta alguna receta pero quiere añadir algún ingrediente o algún paso tiene"%}
-                {%  trans "la opción de mejorarla. De este modo se crear&aacute; un árbol genealógico de"%}
-                {%  trans "recetas en el que figurar&aacute; la jerarqu&iacute;a de las mismas."%}
-            </p>
-            <div class="goals-thumbnail">
-                </p><img alt="140x140" height="200" width="200" src="/static/webapp/image/ourGoalsImprove.jpg" class="img-rounded" />
-            </div>
-        </div>
-        <div class="col-md-4 column">
-            <h2 class="goals-panel-title">{%  trans "Follow"%}</h2>
-            <p>
-                {%  trans "Al igual que en cualquier red social, los usuarios tienen su propio perfil. A través de él, "%}
-                {%  trans "la comunidad de usuarios de EatHub puede ver sus recetas y estar en contacto. si le gustan las recetas "%}
-                {%  trans "de un usuario puede seguirlo para estar informado de sus nuevas recetas. "%}
-            </p>
-            <div class="goals-thumbnail">
-                </p><img alt="140x140" height="200" width="300" src="/static/webapp/image/ourGoalsFollow.jpg" class="img-rounded" />
-            </div>
+        <br>
+
+        <div class="panel panel-body row goals-description">
+            <h3 class="goals-panel-title">{% trans "Affinity System" %}</h3>
+
+            <p class="text-soft"> {% trans "En su perfil podr&aacute; indicar sus sabores preferidos. Con dichos sabores le" %}
+                {% trans "podremos recomendar multitud de recetas con par&aacute;metros similares." %}</p>
         </div>
     </div>
-    <br>
-    <div class="panel panel-body row goals-description">
-        <h3 class="goals-panel-title">{%  trans "Affinity System"%}</h3>
-        <p class="text-soft"> {%  trans "En su perfil podr&aacute; indicar sus sabores preferidos. Con dichos sabores le"%}
-        {%  trans "podremos recomendar multitud de recetas con par&aacute;metros similares."%}</p>
-    </div>
-</div>
 
 {% endblock %}
 
