--- a/templates/webapp/about.html
+++ b/templates/webapp/about.html
@@ -3,60 +3,60 @@
 {% load i18n %}
 {% block container %}
     <div class="col-md-10 col-md-offset-1">
-        <div class="row panel panel-body panel-goals">
-            <h1 class="goals-title">{% trans "What is EatHub?" %}</h1>
+        <div class="row panel panel-body panel-about">
+            <h1 class="about-title">{% trans "What is EatHub?" %}</h1>
 
-            <p class="text-soft goals-description">
+            <p class="text-soft about-description">
                 {% trans "EatHub es una red social en la que podr&aacute; compartir sus recetas, mejorar las de sus amigos y relacionarse con los dem&aacute;s. De este modo, podr&aacute; preparar su comida favorita de otra forma y otras comidas de cualquier parte del mundo." %}
             </p>
         </div>
 
         <div class="row">
             <!-- panel -->
-            <div class="col-md-4 panel-goals-container">
-                <div class="panel panel-body panel-goals">
-                    <h2 class="goals-title">{% trans "Create" %}</h2>
+            <div class="col-md-4 panel-about-container">
+                <div class="panel panel-body panel-about">
+                    <h2 class="about-title">{% trans "Create" %}</h2>
 
-                    <p class="text-soft goals-description">
+                    <p class="text-soft about-description">
                         {% trans "En EatHub podr&aacute;s crear sus propias recetas y compartirlas con sus amigos. Explora comidas de otros usuarios, varíalas con tus propios gustos, ingredientes y métodos." %}
                     </p>
 
-                    <img src="{% static 'webapp/image/ourGoalsCreate.jpg' %}" class="img-rounded goals-thumbnail"/>
+                    <img src="{% static 'webapp/image/ourGoalsCreate.jpg' %}" class="img-rounded about-thumbnail"/>
                 </div>
             </div>
 
 
             <!-- panel -->
-            <div class="col-md-4 panel-goals-container">
-                <div class="panel panel-body panel-goals">
-                    <h2 class="goals-title">{% trans "Improve" %}</h2>
+            <div class="col-md-4 panel-about-container">
+                <div class="panel panel-body panel-about">
+                    <h2 class="about-title">{% trans "Improve" %}</h2>
 
-                    <p class="text-soft goals-description">
+                    <p class="text-soft about-description">
                         {% trans "Si le gusta alguna receta pero quiere añadir algún ingrediente o algún paso tiene la opción de mejorarla. De este modo se crear&aacute; un árbol genealógico de recetas en el que figurar&aacute; la jerarqu&iacute;a de las mismas." %}
                     </p>
 
-                    <img src="{% static 'webapp/image/ourGoalsImprove.jpg' %}" class="img-rounded goals-thumbnail"/>
+                    <img src="{% static 'webapp/image/ourGoalsImprove.jpg' %}" class="img-rounded about-thumbnail"/>
                 </div>
             </div>
 
             <!-- panel -->
-            <div class="col-md-4 panel-goals-container">
-                <div class="panel panel-body panel-goals">
-                    <h2 class="goals-title">{% trans "Social" %}</h2>
+            <div class="col-md-4 panel-about-container">
+                <div class="panel panel-body panel-about">
+                    <h2 class="about-title">{% trans "Social" %}</h2>
 
-                    <p class="text-soft goals-description">
+                    <p class="text-soft about-description">
                         {% trans "Los usuarios tienen su propio perfil, através del cual otros usuarios pueden ver tus recetas y actividad. Puedes seguir a otros usuarios para estar al día de su actividad." %}
                     </p>
 
-                    <img src="{% static 'webapp/image/ourGoalsFollow.jpg' %}" class="img-rounded goals-thumbnail"/>
+                    <img src="{% static 'webapp/image/ourGoalsFollow.jpg' %}" class="img-rounded about-thumbnail"/>
                 </div>
             </div>
         </div>
 
-        <div class="row panel panel-body panel-goals">
-            <h2 class="goals-title">{% trans "Recomendations and affinity" %}</h2>
+        <div class="row panel panel-body panel-about">
+            <h2 class="about-title">{% trans "Recomendations and affinity" %}</h2>
 
-            <p class="text-soft goals-description">
+            <p class="text-soft about-description">
                 {% trans "En su perfil podr&aacute; indicar sus sabores preferidos. Con dichos sabores le podremos recomendar multitud de recetas con par&aacute;metros similares." %}
             </p>
 
