Fix: typo en "recommendations"

--- a/templates/webapp/about.html
+++ b/templates/webapp/about.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="row panel panel-body panel-about">
-            <h2 class="about-title">{% trans "Recomendations and affinity" %}</h2>
+            <h2 class="about-title">{% trans "Recommendations and affinity" %}</h2>
 
             <p class="text-soft about-description">
                 {% trans "En su perfil podr&aacute; indicar sus sabores preferidos. Con dichos sabores le podremos recomendar multitud de recetas con par&aacute;metros similares." %}
