--- a/templates/webapp/newrecipe.html
+++ b/templates/webapp/newrecipe.html
@@ -216,17 +216,6 @@
     <form role="form well well-lg" id="recipe-form" class="form-horizontal" method="post" enctype="multipart/form-data">
     {% csrf_token %}
 
-    {% comment %}TODO: poner cada error en su campo
-    {% endcomment %}
-    {% for field in form %}
-        {% for error in field.errors %}
-            <div class="alert alert-danger">{{ error|escape }}</div>
-        {% endfor %}
-    {% endfor %}
-
-    {{ form.non_field_errors }}
-    {{ form.errors }}
-
     <h3 class="col-lg-offset-1">{% trans "Basic information" %}</h3>
     <fieldset class="col-sm-10 col-sm-offset-1" style="padding: 20px 100px">
 
@@ -239,6 +228,13 @@
                        value="{{ form.title.value | default_if_none:'' }}">
             </div>
         </div>
+        {% if form.title.errors %}
+            <span class="alert alert-danger">
+                {% for error in form.title.errors %}
+                    {{ error|escape }}
+                {% endfor %}
+            </span>
+        {% endif %}
 
         <!-- Main Image -->
         <input type="hidden" id="id_{{ form.main_picture_id.name }}" name="{{ form.main_picture_id.name }}"
@@ -256,6 +252,13 @@
                     </div>
                 </div>
             </div>
+            {% if form.main_picture_id.errors %}
+                <span class="alert alert-danger">
+                {% for error in form.main_picture_id.errors %}
+                    {{ error|escape }}
+                {% endfor %}
+            </span>
+        {% endif %}
         </div>
 
         <!-- Gallery -->
@@ -299,6 +302,13 @@
                           name="{{ form.description.name }}" id="id_{{ form.description.name }}"
                         >{{ form.description.value | default_if_none:'' }}</textarea>
             </div>
+            {% if form.description.errors %}
+            <span class="alert alert-danger">
+                {% for error in form.description.errors %}
+                    {{ error|escape }}
+                {% endfor %}
+            </span>
+        {% endif %}
         </div>
     </fieldset>
 
@@ -360,6 +370,13 @@
                         <span class="form-control repeatable-add">{% trans "Add an ingredient..." %}</span>
                     </div>
                 </div>
+                {% if form.ingredients_json.errors %}
+                    <span class="alert alert-danger">
+                        {% for error in form.ingredients_json.errors %}
+                            {{ error|escape }}
+                        {% endfor %}
+                    </span>
+                {% endif %}
             </div>
         </div>
 
@@ -441,6 +458,14 @@
                                 ></textarea>
                     </div>
                 </div>
+                {% comment %}TODO: colocar mejor el mensaje de error{% endcomment %}
+                {% if form.steps_json.errors %}
+                        <span class="alert alert-danger">
+                        {% for error in form.steps_json.errors %}
+                            {{ error|escape }}
+                        {% endfor %}
+                    </span>
+                {% endif %}
             </div>
         </div>
 
@@ -503,6 +528,13 @@
                             <span class="input-group-addon"><span
                                     class="glyphicon glyphicon-time"></span> </span>
                         </div>
+                        {% if form.prep_time.errors %}
+                            <span class="alert alert-danger">
+                                {% for error in form.prep_time.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            </span>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -520,6 +552,13 @@
                                     class="glyphicon glyphicon-time"></span> </span>
                         </div>
                     </div>
+                    {% if form.cook_time.errors %}
+                        <span class="alert alert-danger">
+                            {% for error in form.cook_time.errors %}
+                                {{ error|escape }}
+                            {% endfor %}
+                        </span>
+                    {% endif %}
                 </div>
             </div>
         </div>
